--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		"laravel/framework": "4.1.*",
 		"greggilbert/recaptcha": "1.0.7",
         "nategood/httpful": "0.2.11",
+        "svabael/social-oauth": "*",
 		"phpclasses/sasl": ">=1.0.0",
 		"phpclasses/httpclient": ">=1.0.0",
 		"phpclasses/oauth-api": ">=1.0.11"
@@ -18,7 +19,8 @@
 			"url": "http:\/\/www.phpclasses.org\/"
 		},
 		{
-			"packagist": false
+			"type": "vcs",
+			"url":  "git@github.com:stavros-zavrakas/social-oauth.git"
 		}
 	],
 	"autoload": {
