--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,8 @@
     "qunit": "~1.20.0",
     "pretender": "~0.10.1",
     "lodash": "~3.7.0",
-    "Faker": "~3.0.0"
+    "Faker": "~3.0.0",
+    "bootstrap-sass": "^3.3.6"
   },
   "resolutions": {
     "ember": "2.2.0"
